[package]
name = "dyn_quantity"
version = "0.5.4"
edition = "2024"
description = "Representing physical quantities dynamically (i.e. via values, not via the type system)"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/dyn_quantity.git"
resolver = "2"

[dependencies]
uom = {version = "0.36", default-features = false, features = ["f64", "complex64", "si", "std", "serde"], optional = true}
dyn_quantity_lexer = {version = "0.1", optional = true}
serde = {version = "1", features = ["derive", "rc"], optional = true }
deserialize_untagged_verbose_error = {version = "0.1.5", optional = true}
num = {version = "0.4"}

[features]
default = []
uom = ["dep:uom"]
from_str = ["dep:dyn_quantity_lexer"]
serde = ["dep:serde", "dep:deserialize_untagged_verbose_error", "num/serde"]

[dev-dependencies]
dyn_quantity = { path = ".", features = ["uom", "serde", "from_str"] }
serde_yaml = "0.8"
indoc = "1.0"
approx = "0.5.1"

[package.metadata.docs.rs]
features = ["uom", "from_str", "serde"]